--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "npm run copy-assets && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:offline": "nest build && npx serverless offline",
+    "copy-assets": "cpx src/cert/* dist/cert/",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,25 +23,33 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.5.1",
+    "@codegenie/serverless-express": "^4.14.1",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "8.0.0",
+    "aws-lambda": "^1.0.7",
+    "cp": "^0.2.0",
+    "cpx": "^1.5.0",
     "helmet": "^4.2.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4",
+    "rxjs": "^7.1.0",
+    "typeorm": "0.2.34",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.2",
-    "@nestjs/schematics": "^7.2.1",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/aws-lambda": "^8.10.137",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.13.30",
@@ -51,15 +61,16 @@
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "26.4.2",
+    "jest": "29.7.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "serverless-offline": "^13.5.0",
     "supertest": "^4.0.2",
-    "ts-jest": "26.2.0",
+    "ts-jest": "29.1.2",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^4.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
